# CheatTurbine

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-upload.yml
src/: main.cpp
src/backend/CTvalue/: CTvalue.cpp  CTvalue.h  valueType.h  valueUtils.cpp  valueUtils.h
src/backend/pointerChain/: pointerChain.cpp  pointerChain.h
src/backend/pointerMap/: pointerMap.cpp  pointerMap.h
src/backend/pointerScan/: pointerScan.cpp  pointerScan.h
src/backend/regions/: memoryRegion.h  regions.cpp  regions.h
src/backend/scanner/: scanner.cpp  scanner.h
src/backend/selectedProcess/: selectedProcess.cpp  selectedProcess.h
src/backend/settings/: settings.cpp  settings.h
src/backend/starredAddress/: starredAddress.cpp  starredAddress.h
src/backend/virtualMemory/: virtualMemory.cpp  virtualMemory.h
src/config/: config.h.in
src/gui/: gui.cpp  gui.h
src/gui/impl/imgui/: imguiImpl.cpp  imguiImpl.h
src/gui/impl/vulkan/: vulkanImpl.cpp  vulkanImpl.h
src/gui/widgets/: widgets.cpp  widgets.h
src/gui/windows/: windows.h
src/gui/windows/decompiler/: decompilerWindow.cpp  decompilerWindow.h
src/gui/windows/disassembler/: disassemblerWindow.cpp  disassemblerWindow.h
src/gui/windows/dockSpace/: dockSpaceWindow.cpp  dockSpaceWindow.h
src/gui/windows/generic/: window.cpp  window.h
src/gui/windows/imguiDemo/: imguiDemo.cpp  imguiDemo.h
src/gui/windows/logBar/: logBarWindow.cpp  logBarWindow.h
src/gui/windows/logs/: logsWindow.cpp  logsWindow.h
src/gui/windows/memoryEditor/: memoryEditorWindow.cpp  memoryEditorWindow.h
src/gui/windows/menuBar/: menuBar.cpp  menuBar.h
src/gui/windows/pchainEditor/: pchainEditorWindow.cpp  pchainEditorWindow.h
src/gui/windows/pointerMapManager/: pointerMapManagerWindow.cpp  pointerMapManagerWindow.h
src/gui/windows/pointerScan/: pointerScanWindow.cpp  pointerScanWindow.h
src/gui/windows/processSelector/: processSelectorWindow.cpp  processSelectorWindow.h
src/gui/windows/scanner/: scannerWindow.cpp  scannerWindow.h
src/gui/windows/settings/: settingsWindow.cpp  settingsWindow.h
src/gui/windows/starredAddresses/: starredAddressesWindow.cpp  starredAddressesWindow.h
src/gui/windows/structureDissector/: structureDissectorWindow.cpp  structureDissectorWindow.h
